--- a/src/components/Seats/style.css
+++ b/src/components/Seats/style.css
@@ -13,7 +13,8 @@
 }
 
 .seat{
-    background-color: #444451;
+    background-color: white;
+    border-style: solid;
     height: 17px;
     width: 20px;
     margin: 3px;
@@ -32,10 +33,12 @@
 
 .seat.selected{
     background-color: #6feaf6;
+    border-style: none;
 }
 
 .seat.occupied{
-    background-color: white;
+    background-color: #444451;
+    border-style: none;
 }
 
 .showcase .seat:not(.occupied):hover{
